--- a/share/qt/Info.plist
+++ b/share/qt/Info.plist
@@ -3,7 +3,7 @@
 <plist version="0.9">
 <dict>
 	<key>CFBundleIconFile</key>
-	<string>funcoin.icns</string>
+	<string>curiuscoin.icns</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleGetInfoString</key>
@@ -15,19 +15,19 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleExecutable</key>
-	<string>Funcoin-Qt</string>
+	<string>curiuscoin-Qt</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.funcoin.Funcoin-Qt</string>
+	<string>org.curiuscoin.curiuscoin-Qt</string>
         <key>CFBundleURLTypes</key>
         <array>
           <dict>
             <key>CFBundleTypeRole</key>
             <string>Editor</string>
             <key>CFBundleURLName</key>
-            <string>org.funcoin.FuncoinPayment</string>
+            <string>org.curiuscoin.curiuscoinPayment</string>
             <key>CFBundleURLSchemes</key>
             <array>
-              <string>funcoin</string>
+              <string>curiuscoin</string>
             </array>
           </dict>
         </array>
